--- a/Reconnect/package.json
+++ b/Reconnect/package.json
@@ -18,6 +18,7 @@
     "expo-location": "~16.1.0",
     "expo-secure-store": "~12.3.1",
     "expo-status-bar": "~1.6.0",
+    "jsonwebtoken": "^9.0.2",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-paper": "^5.11.4",
