--- a/Reconnect/package.json
+++ b/Reconnect/package.json
@@ -21,13 +21,16 @@
     "jsonwebtoken": "^9.0.2",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-maps": "1.7.1",
+    "react-native-maps-directions": "^1.9.0",
     "react-native-paper": "^5.11.4",
     "react-native-read-more-text": "^1.1.2",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-swiper": "^1.6.0",
     "react-native-tab-view": "^3.5.2",
-    "socket.io-client": "^4.7.2"
+    "socket.io-client": "^4.7.2",
+    "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
