--- a/Reconnect/package.json
+++ b/Reconnect/package.json
@@ -19,6 +19,7 @@
     "expo-secure-store": "~12.3.1",
     "expo-status-bar": "~1.6.0",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-maps": "1.7.1",
@@ -29,8 +30,8 @@
     "react-native-screens": "~3.22.0",
     "react-native-swiper": "^1.6.0",
     "react-native-tab-view": "^3.5.2",
-    "socket.io-client": "^4.7.2",
-    "react-native-vector-icons": "^10.0.3"
+    "react-native-vector-icons": "^10.0.3",
+    "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
